--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
         <div class="registerbox">
             <img src="loginicon.png" class="avater">
             <h1>Register here</h1>
-            <form>
+            <form action="login.html">
                 <p> Username:</p>
                 <input type="text" name="" placeholder="enter the user name">
                 <p> Userid:</p>
