--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
         <div class="loginbox">
             <img src="loginicon.png" class="avater">
             <h1>Login here</h1>
-            <form>
+            <form action="option.html">
                 <p> Username:</p>
                 <input type="text" name="" placeholder="enter the user name">
                 <p> Password:</p>
